Fix Features Section Spacing
Fixed Features Section Spacing

--- a/sass/components/_intro.scss
+++ b/sass/components/_intro.scss
@@ -3,7 +3,7 @@
 // Mobile Styling - Media Query
 
 .intro p {
-    font-size: clamp(1rem, 0.9rem + 0.8vw, 1.5625rem);
+    font-size: clamp(1rem, 0.9rem + 0.6vw, 1.5625rem);
     line-height: clamp(1.875rem, 1.36rem + 1.5vw, 2.8125rem);
     margin: 0 0 1.5rem 0;
     max-width: 100%;
